app/k8s/app/deployment.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: ui
  labels:
    app: rieau
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rieau
      task: ui
  template:
    metadata:
      labels:
        app: rieau
        task: ui
    spec:
      containers:
        - name: rieau-ui
          image: tristanrobert/rieau-ui:0.2.0
          ports:
            - name: ui
              containerPort: 3000
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: api
  labels:
    app: rieau
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rieau
      task: api
  template:
    metadata:
      labels:
        app: rieau
        task: api
    spec:
      containers:
        - name: rieau-api
          image: tristanrobert/rieau-api:0.2.0
          ports:
            - name: api
              containerPort: 5000
          volumeMounts:
            - name: config-app
              subPath: application.properties
              mountPath: /app/config/application.properties
              readOnly: true
      volumes:
        - name: config-app
          configMap:
            name: config-app
