app/k8s/app/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  ports:
  - name: ui
    targetPort: 3000
    port: 3000
  selector:
    app: rieau
    task: ui
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
  - name: api
    targetPort: 5000
    port: 5000
  selector:
    app: rieau
    task: api
