app/k8s/app/app-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: app
spec:
  rules:
  - host: rieau.cohesion-territoires.gouv.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: ui
          servicePort: ui
  tls:
  - secretName: rieau-cert
